Changed some stuff
Changed some stuff

--- a/index.html
+++ b/index.html
@@ -7,23 +7,31 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Привет! Я Даниил</h1>
-    <p>Добро пожаловать на мой сайт!</p>
-  </header>
+  <nav>
+    <ul class="menu">
+      <li><a href="#home">Главная</a></li>
+      <li><a href="#projects">Работы</a></li>
+      <li><a href="#contacts">Контакты</a></li>
+    </ul>
+  </nav>
 
   <main>
-    <section id="about">
-      <h2>Обо мне</h2>
-      <p></p>
+    <section id="home">
+      <h2>Добро пожаловать!</h2>
+      <p>Здесь ты можешь рассказать о себе, своих увлечениях или проектах.</p>
     </section>
 
     <section id="projects">
-      <h2>Мои проекты</h2>
+      <h2>Мои работы</h2>
       <ul>
-        <li>Проект 1 — описание</li>
-        <li>Проект 2 — описание</li>
+        <li>Проект 1 — краткое описание.</li>
+        <li>Проект 2 — краткое описание.</li>
       </ul>
+    </section>
+
+    <section id="contacts">
+      <h2>Контакты</h2>
+      <p>Напиши мне: <a href="mailto:example@mail.com">example@mail.com</a></p>
     </section>
   </main>
 
