Added a lot of info
Added a lot of info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Обо мне</title>
@@ -18,25 +20,97 @@
   <main>
     <section id="home">
       <h2>Добро пожаловать!</h2>
-      <p>Здесь ты можешь рассказать о себе, своих увлечениях или проектах.</p>
+      <p>Разрабатываю игры на Unity. Изучаю языки программирования:
+        <ul>
+            <li>Python</li>
+            <li>C++</li>
+            <li>C#</li>
+        </ul> 
+    </p>
     </section>
 
     <section id="projects">
-      <h2>Мои работы</h2>
+      <h2>Творчество</h2>
+      <h3>Игры:</h3>
       <ul>
-        <li>Проект 1 — краткое описание.</li>
-        <li>Проект 2 — краткое описание.</li>
+        <li> <a href="https://programmer-1.itch.io/banana-in-hell-escape" target="_blank"> Banana In Hell Escape </a> </li>
+        <small>
+            Первая игра, которую я выложил. <br>
+            По итогу, из-за проверки модерации она в списке участников не появилась. <br>
+            Сделана за 2 дня. <br>
+        </small>
+
+        <br>
+        <li> <a href="https://programmer-1.itch.io/2d-runner" target="_blank"> 2D Runner </a> </li>
+        <small>
+            Runner игра, познакомился с механикой бесконечной генерации. <br> 
+            Сделана за 2-3 дня. <br>
+        </small>
+
+        <br>
+        <li> <a href="https://programmer-1.itch.io/winter-adventure" target="_blank"> Winter Adventure </a> </li>
+        <small>
+            Платформер. Сделан на зимний геймджем за 2 дня. <br>
+        </small>
+
+        <br>
+        <li> <a href="https://programmer-1.itch.io/trip-to-the-pharmacy" target="_blank"> Trip To The Pharmacy </a> </li>
+        <small>
+            Сделана за 3 дня. Похожа на Winter Adventure. <br>
+        </small>
+
+        <br>
+        <li> <a href="https://programmer-1.itch.io/are-you-a-weapon" target="_blank"> Are You Weapon? </a> </li>
+        <small>
+            Игра была сделана за 3 дня для одного из геймджемов.<br>
+            Отстреливаешься от белых квадратов, пытаешься пройти как можно больше волн.<br>
+        </small>
+
+        <br>
+        <li> <a href="https://programmer-1.itch.io/obunga" target="_blank"> Night With Obunga </a> </li>
+        <small>
+            Игру делал 2-3 недели. Пытался повторить стилистику игры FNAF.<br>
+            Впервые работал с 3D. <br>
+        </small>
+
+        <br>
+        <li> <a href="https://chaiteam.itch.io/dementia" target="_blank"> Dementia </a> </li>
+        <small>
+            Игру делал почти 2 года. Самая длинная по сравнению с остальным. <br>
+            Во время разработки решил создать свой телеграм канал и продвигать ее. <br>
+        </small>
       </ul>
+      <p>
+        Информация перенесена с другого сайта, поэтому кого заинтерисовало <br>
+        Можете посмотреть больше информации на <a href="https://tbpotw.github.io/games/" target="_blank"> сайте</a>.
+      </p>
     </section>
 
     <section id="contacts">
-      <h2>Контакты</h2>
-      <p>Напиши мне: <a href="mailto:example@mail.com">example@mail.com</a></p>
-    </section>
+  <h2>Контакты</h2>
+  <div class="socials">
+    <a href="https://github.com/TBPOTW" target="_blank" class="social github" title="GitHub">
+      <i class="fa-brands fa-github"></i>
+    </a>
+
+    <a href="mailto:mishch.dan@gmail.com" class="social email" title="Email">
+      <i class="fa-solid fa-envelope"></i>
+    </a>
+
+    <a href="https://t.me/GameDevInsights" target="_blank" class="social telegram" title="Telegram">
+      <i class="fa-brands fa-telegram"></i>
+    </a>
+
+    <a href="https://www.tiktok.com/@gamedever_1" target="_blank" class="social tiktok" title="TikTok">
+      <i class="fa-brands fa-tiktok"></i>
+    </a>
+  </div>
+</section>
+
   </main>
 
   <footer>
-    <p>© 2025 Torie</p>
+    <p>© <script>document.write(new Date().getFullYear())</script> Torie</p>
   </footer>
 
   <script src="script.js"></script>
