--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h2>Творчество</h2>
       <h3>Игры:</h3>
       <ul>
-        <li> <a href="https://programmer-1.itch.io/banana-in-hell-escape" target="_blank"> Banana In Hell Escape </a> </li>
+        <li> <a href="https://chaiteam.itch.io/banana-in-hell-escape" target="_blank"> Banana In Hell Escape </a> </li>
         <small>
             Первая игра, которую я выложил. <br>
             По итогу, из-за проверки модерации она в списке участников не появилась. <br>
@@ -41,36 +41,42 @@
         </small>
 
         <br>
-        <li> <a href="https://programmer-1.itch.io/2d-runner" target="_blank"> 2D Runner </a> </li>
+        <li> <a href="https://chaiteam.itch.io/2d-runner" target="_blank"> 2D Runner </a> </li>
         <small>
             Runner игра, познакомился с механикой бесконечной генерации. <br> 
             Сделана за 2-3 дня. <br>
         </small>
 
         <br>
-        <li> <a href="https://programmer-1.itch.io/winter-adventure" target="_blank"> Winter Adventure </a> </li>
+        <li> <a href="https://chaiteam.itch.io/winter-adventure" target="_blank"> Winter Adventure </a> </li>
         <small>
             Платформер. Сделан на зимний геймджем за 2 дня. <br>
         </small>
 
         <br>
-        <li> <a href="https://programmer-1.itch.io/trip-to-the-pharmacy" target="_blank"> Trip To The Pharmacy </a> </li>
+        <li> <a href="https://chaiteam.itch.io/trip-to-the-pharmacy" target="_blank"> Trip To The Pharmacy </a> </li>
         <small>
             Сделана за 3 дня. Похожа на Winter Adventure. <br>
         </small>
 
         <br>
-        <li> <a href="https://programmer-1.itch.io/are-you-a-weapon" target="_blank"> Are You Weapon? </a> </li>
+        <li> <a href="https://chaiteam.itch.io/are-you-a-weapon" target="_blank"> Are You Weapon? </a> </li>
         <small>
             Игра была сделана за 3 дня для одного из геймджемов.<br>
             Отстреливаешься от белых квадратов, пытаешься пройти как можно больше волн.<br>
         </small>
 
         <br>
-        <li> <a href="https://programmer-1.itch.io/obunga" target="_blank"> Night With Obunga </a> </li>
+        <li> <a href="https://chaiteam.itch.io/obunga" target="_blank"> Night With Obunga </a> </li>
         <small>
             Игру делал 2-3 недели. Пытался повторить стилистику игры FNAF.<br>
             Впервые работал с 3D. <br>
+        </small>
+
+        <br>
+        <li> <a href="https://chaiteam.itch.io/rams-office" target="_blank"> Rams office </a> </li>
+        <small>
+            Игра сделана на геймджем за 3 дня с коммандой.<br>
         </small>
 
         <br>
