--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   </main>
 
-  <footer>
+  <footer class="footer">
     <p>© <script>document.write(new Date().getFullYear())</script> Torie</p>
   </footer>
 
