--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </main>
 
   <footer class="footer">
-    <p>© <script>document.write(new Date().getFullYear())</script> Torie</p>
+    <p>© <span id="year"></span> Torie</p>
   </footer>
 
   <script src="script.js"></script>
